# xirr_agent

./: .gitignore  README.md  main.py  pyproject.toml
src/example_big_tool/: agent.py
src/tools/xirr/: calculation.py
src/wealth/: wealth_agent.py
